# audiomedia-grabbr

./: .dockerignore  .env.example  DEPLOY.md  Dockerfile.backend  Dockerfile.frontend  README.md  deploy.sh  docker-compose.yml  entrypoint.sh  fly.backend.toml  fly.frontend.toml  nginx.conf  pyproject.toml  rxconfig.py
alembic/versions/: eaf251037874_magic_link_tokens.py
reflex.lock/: package.json
reflex_app/: auth_routes.py  config.py  models.py
reflex_app/pages/: auth_pages.py  project.py
reflex_app/services/: email.py  magic_link.py  storage.py
reflex_app/state/: auth_state.py  pipeline_state.py  projects_state.py
tests/: test_magic_link.py  test_storage.py
