[project]
name = "reflex-app"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.109.1",
    "faster-whisper>=1.2.1",
    "imageio-ffmpeg>=0.6.0",
    "moviepy>=2.2.1",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.1.0",
    "reflex>=0.9.4",
    "reflex-local-auth>=0.5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
